--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
   push:
     branches:
       - main
+      - misc
 
 jobs:
   mix_test:
@@ -24,7 +25,7 @@ jobs:
             otp: 25.0
             check_formatted: true
             run_plugin_tests: true
-            warnings-as-errors: true
+            warnings_as_errors: true
     env:
       MIX_ENV: test
     steps:
@@ -38,10 +39,11 @@ jobs:
           mix local.hex --force
           mix local.rebar --force
           mix deps.get --only test
+      - name: Compile Dependencies
+        run: mix deps.compile
       - run: mix format --check-formatted
         if: matrix.check_formatted
-      - run: mix compile --warnings-as-errors
-        if: matrix.warnings_as_errors
+      - run: mix compile --warnings-as-errors=${{matrix.warnings_as_errors || false}}
       - run: mix test
         if: matrix.run_plugin_tests
       - run: mix test --exclude plugin
